chore(auth): test usecase
